Fixed code smells as requested by Sonar analysis